--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-# IntelliJ / Android Studio
 *.iml
-.idea/
-.gradle/
-
-# Local config (asla commitlenmez)
-local.properties
-
-# Build outputs
-build/
-captures/
-.externalNativeBuild/
-.cxx/
-
-# OS
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
 .DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
